# SandForm

./: .gitignore  CMakeLists.txt  README.md  Task.md  compile_commands.json  ses.vim
.cache/clangd/index/: app.cpp.8EBDCF0209CA9AC8.idx
all/: app.cpp
all/core/: CMakeLists.txt  README.md
all/core/include/api/: core_api.h
all/core/include/core/: config.h  engine.h  error.h  eventbus.h  log.h  resources.h  resourses_types.h  types.h  utils.h
all/core/include/core/interfaces/: IModule.h  ITickable.h
all/core/include/core/resources_types/: enums.h  json.h  texture.h
all/core/include/core/services/: config.h  eventbus.h  resources.h  tick.h
all/core/include/core/services/config/: Config.h
all/core/include/core/services/logger/: Logger.h
all/core/include/core/services/resources/in/: manager.h  provider.h  resource.h  task.h
all/core/include/core/services/resources/in/providers/: file.h
all/core/include/core/utils/: hash.h
all/core/src/: config.cpp  engine.cpp  eventbus.cpp  log.cpp  resources.cpp
all/core/src/config/: config.cpp  config_api.cpp  config_init.cpp
all/core/src/eventbus/: eventbus.cpp  eventbus_api.cpp  eventbus_init.cpp
all/core/src/log/: log.cpp
all/core/src/resources/: main.cpp  resource_internal.cpp  resources_api.cpp  resources_init.cpp  resources_iresource.cpp  resources_task.cpp  resources_thread.cpp  resources_utils.cpp  types.cpp
all/core/src/resources/types/: json.cpp  texture.cpp
all/core/src/tick/: tick_init.cpp
all/core/src/utils/: general.cpp  programm.cpp  time.cpp
all/dynamic/logic/: CMakeLists.txt
all/dynamic/logic/src/: hello.cpp
all/engine/: CMakeLists.txt  CMakePresets.json
all/logic/: CMakeLists.txt
all/logic/include/contract/: events.h
all/logic/include/logic/: table.h
all/modding/: README.md
all/plugin_manager/: CMakeLists.txt  README.md
all/plugin_manager/include/plugin_manager/: manager.h  plugin.h
all/plugin_manager/src/: manager.cpp  plugin.cpp
all/sdk/document/: query_interface.md
all/sdk/document/development/: build.md
all/sdk/document/resources/: action.md  example.md  storage.md
all/sdk/sfr/: engine_api.h
all/sdk/sfr/common/: status_codes.h  types.h
all/sdk/sfr/core/logger/: types.h
all/sdk/sfr/core/resources/: IStream.h  Interface.h  interface.h  results.h  states.h
all/starter/: CMakeLists.txt  app.cpp  compile_commands.json
all/starter/build_windows_x64/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
all/starter/build_windows_x64/dynamic/core/: Makefile  cmake_install.cmake
all/starter/build_windows_x64/dynamic/logic/: Makefile  cmake_install.cmake
all/starter/build_windows_x64/static/plugin_manager/: Makefile  cmake_install.cmake
all/starter/build_windows_x86/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
all/starter/build_windows_x86/dynamic/core/: Makefile  cmake_install.cmake
all/starter/build_windows_x86/dynamic/logic/: Makefile  cmake_install.cmake
all/starter/build_windows_x86/static/plugin_manager/: Makefile  cmake_install.cmake
all/starter/dynamic/core/: CMakeLists.txt
all/starter/dynamic/core/include/core/services/eventbus/: Eventbus.h
all/starter/dynamic/core/include/core/services/resources/: Resources.h
all/starter/dynamic/core/include/core/services/resources/in/: manager.h  task.h
all/starter/dynamic/core/include/core/utils/: prg.h  time.h
all/starter/dynamic/core/include/macros/: files_stream.h
all/starter/dynamic/core/src/config/: config_init.cpp
all/starter/dynamic/core/src/eventbus/: eventbus_api.cpp  eventbus_init.cpp
all/starter/dynamic/core/src/resources/: resources_api.cpp  resources_init.cpp  resources_task.cpp  resources_utils.cpp
all/starter/dynamic/core/src/resources/providers/: file.cpp
all/starter/dynamic/core/src/tick/: tick_init.cpp
all/starter/dynamic/core/src/utils/: hash.cpp  programm.cpp
all/starter/dynamic/logic/: CMakeLists.txt  README.md
all/starter/dynamic/logic/include/contract/: data_types.h
all/starter/dynamic/logic/include/logic/hello/: hello.h
all/starter/static/plugin_manager/: CMakeLists.txt
all/static/plugin_manager/: CMakeLists.txt
all/static/plugin_manager/include/plugin_manager/: manager.h  plugin.h
all/static/plugin_manager/src/: manager.cpp  plugin.cpp
resources/: modules.json
resources/settings/: core.json  render.json
